--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,81 +2,92 @@
     padding-left:0;
 }
 
-#biggrid{
-    display:grid;
-    grid-template-columns: repeat(5,320px);
-    grid-template-rows: repeat(6,180px);
+.section{
+  height:900px;
+}
+
+
+#container1{
+
     max-width: 100%;
     height:950px;
     background-color:black;
 }
 
-#about{
-    grid-column: 1/3;
-    grid-row:4/5;
-}
 
-
-#work{
-    grid-column:1/3;
-    grid-row:5/6;
-}
 
 h1{
-    font-size:180px;
+    font-size:100px;
     color:white;
 }
 
-#menu{
-    grid-column:6/7;
-    grid-row:1/2;
+h2{
+  font-size:16px;
+  color:white;
 }
 
+
+#menu{
+    position:fixed;
+    z-index: 100;
+    padding-left:95%;
+    padding-top:3%;
+}
+
+#container2{
+  background:red;
+
+}
+
+#container3{
+  background:yellow;
+}
+
+#container4{
+  background:blue;
+}
 .burger{
     display:block;
-    width: 50px;
-    height: 8px;
+    width: 30px;
+    height: 3px;
     background-color: white;
     margin: 10px 0px;
     padding-right:50px;
 }
 
 
+
 .sidenav {
     height: 100%; /* 100% Full-height */
     width: 0; /* 0 width - change this with JavaScript */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Stay on top */
+    z-index: 200; /* Stay on top */
     top: 0; /* Stay at the top */
     left: 0;
-    background-color:white; /* Black*/
+    background-color:black; /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 160px; /* Place content 60px from the top */
+    padding-top: 240px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
   }
   
   /* The navigation menu links */
   .sidenav a {
-    padding: 20px 8px 8px 32px;
     text-decoration: none;
-    font-size: 180px;
-    color:black;
+    font-size: 100px;
+    color:white;
     display: block;
     transition: 0.3s;
+    padding-left:15%;
   }
   
   /* When you mouse over the navigation links, change their color */
-  .sidenav a:hover {
-    color:white;
-    background:black;
-  }
+ 
   
   /* Position and style the close button (top right corner) */
   .sidenav .closebtn {
     position: absolute;
-    top: 0;
+    top: 0px;
     right: 25px;
-    font-size: 100px;
     margin-left: 50px;
   }
   
@@ -93,3 +104,20 @@ h1{
   }
 
 
+
+  #fp-nav ul li a span{
+    background-color:white;
+  }
+
+  #fp-nav.fp-right {
+    right: 50px;
+  }
+
+  #aboutme{
+    height:920px;
+    background:black;
+  }
+
+  #aboutme h2{
+    font-size:50px;
+  }
