--- a/coldgrille/stylesheets/shortcodes.css
+++ b/coldgrille/stylesheets/shortcodes.css
@@ -1330,5 +1330,21 @@ button.border {
 }
 
 .merchpic{
-    width:50%;
+    width:50%;}
+
+.carousel-indicators .active {
+    width: 12px;
+    height: 12px;
+    margin: 0;
+    background-color:#b8e9f4;}
+
+
+
+
+.carousel-indicators li {
+    border:1px solid #b8e9f4;}
+
+
+.carousel-indicators{
+    top:110%;
 }
