--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,11 +4,15 @@
 .container{
     padding-left:0;
 }
-
+#fullpage{
+  display:block;
+}
+#mobilepage{
+  display:none;
+}
 .glitch{
     color:white;
     position:relative;
-    width:400px;
     margin-left:15%;
     margin-top:5%;
     font-size:100px;
@@ -163,10 +167,19 @@ h1{
 
 }
 
-.banneranchor:hover{
-    text-decoration: line-through;
+.banneranchor{
+    transform:rotate(-90deg);
+    position: absolute;
+    left: -10%;
+    top: 40%;
 }
 
+.banneranchor2{
+  transform:rotate(-90deg);
+  position: absolute;
+  left: -8%;
+  top: 40%;
+}
 
 
 
@@ -346,7 +359,6 @@ a:hover{
   grid-template-rows: repeat(auto-fill, minmax(200px, 1fr));
   grid-gap: 120px;
   max-width:800px;
-  padding-top:300px;
 }
 
 .thumbnail{
@@ -787,7 +799,9 @@ p{
 }
 
 .visual_caption{
-  text-align: center;
+  text-align: left;
+  padding-left:30%;
+  padding-right:15%;
 }
 
 
@@ -820,9 +834,19 @@ p{
   border-left:20px solid rgb(247, 102, 215);
 }
 
+.webdesignintro h1{
+  text-align: center;
+}
 
+#work{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-
+#webuxdesign{
+  padding-top:10%;
+}
 
 
 
@@ -848,14 +872,25 @@ p{
 
 
 @media (max-width: 576px) {
+  #fullpage{
+    display:none;
+  }
+  #mobilepage{
+    display:block;
+  }
   #firstpageimage img{ 
     display:none;
 
   }
+  html, body{
+    overflow:scroll !important;
+  }
   #aboutme img{
     display:none;
   }
-
+  #fp-nav{
+    display:none;
+  }
   #firstline{
     top:50vh;
   }
@@ -956,9 +991,7 @@ p{
     padding-left:15%;
   }
 
-  .glitch{
-    margin-left:3%;
-  }
+  
   .glitch:before{
     display:none;
   }
@@ -973,16 +1006,124 @@ p{
     margin-left:5%;
   }
 
+  .grid{
+    grid-gap: 30px;
+    max-width: 400px;
+    padding-top:50px;
+    padding-left:30px;
+  }
+
+  .webdesignintro h2{
+    font-size:18px;
+  }
+
+  #fullpage{
+    display:none;
+  }
+
+  .mobile{
+    background-color:rgb(20, 20, 20);
+  }
+
+
+  .glitch{
+    margin-top:0;
+    padding-top:20%;
+    margin-left:0;
+  }
+  
+
+  #webdesignmobile{
+    padding-top:30%;
+  }
+
+  #webdesignmobile h1{
+    font-size:40px;
+    text-align: center;
+  }
+
+  #visualdesignmobile{
+    padding-top:70%;
+  }
+
+  #visualdesignmobile h1{
+    font-size:40px;
+    text-align: center;
+  }
+
+  #memememobile{
+    display:flex;
+    justify-content: center;
+    align-items:center;
+    flex-direction: column;
+  }
+
+  #memememobile h2{
+    font-size:16px;
+    color:rgb(248, 241, 140);
+  }
+
+  .sidenav {
+    
+    padding-left: 0;
+}
+
+   
+  #bigmobile{
+    height:3000px;
+  }
+
+
+  #menu{
+    padding-left:93%;
+  }
+
+  #webuxdesign{
+    height:2500px;
+  }
+
+  .visual_caption{
+    padding-left:5%;
+  }
 }
 
 
-@media (min-width: 768px) { ... }
+@media (min-width: 576px) {
+
+ .mobile{
+   display:none;
+ }
+
+ #mobile{
+   display:none;
+ }
+}
+
+
+
+@media (min-width: 768px) {
+  .mobile{
+    display:none;
+  }
+  
+  #mobile{
+    display:none;
+  }
+}
 
 
 @media (min-width: 992px) { ... }
 
 
-@media (min-width: 1200px) { ... }
+@media (max-width: 1200px) {
+    .banneranchor{
+      display:none;
+    }
+
+    .banneranchor2{
+      display:none;
+    }
+ }
 
 
 
